<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item 
         android:title="@string/text_size"
         android:icon="@drawable/title_share"
         android:showAsAction="always|withText">
         <menu>
             <group android:checkableBehavior="single">
                 <item 
                     android:id="@+id/textfont_minsmall"
                     android:title="@string/text_smallest"
                     />
                 <item 
                     android:id="@+id/textfont_small"
                     android:title="@string/text_smaller"
                     />
                 <item 
                     android:id="@+id/textfont_normal"
                     android:title="@string/text_normal"
                     />
                 <item 
                     android:id="@+id/textfont_large"
                     android:title="@string/text_largeer"
                     />
                 <item 
                     android:id="@+id/textfont_maxlarge"
                     android:title="@string/text_largest"
                     />
             </group>
         </menu>
     </item>
     
     <item 
         android:id="@+id/refresh"
         android:icon="@drawable/app_icon"
         android:title="@string/refresh"
         android:showAsAction="always|withText"
     />

</menu>
