<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/style_color_primary"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="120dp"
            android:layout_height="120dp" >

            <com.hereafter.wxarticle.widget.CircleImageView
                android:id="@+id/head"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/defaultpic"
                app:civ_border_color="@color/white"
                app:civ_border_overlay="true"
                app:civ_border_width="2dp"
                app:civ_fill_color="@color/red" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:src="@drawable/camera" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_nickname" />

                <EditText
                    android:id="@+id/nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/user_enter_nickname"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="@dimen/textfont13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_birth" />

                <Spinner
                    android:id="@+id/birth_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightwhite"
                    android:padding="10dp"
                    android:textSize="@dimen/textfont13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_sex" />

                <RadioGroup
                    android:id="@+id/sexgroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawablePadding="10dp"
                    android:hint="@string/register_password_hint"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:textSize="@dimen/textfont13" >

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_man" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_feman" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_email" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/user_enter_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textSize="@dimen/textfont13" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_lightwhite_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="10dp"
            android:text="@string/submit" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/login_line_horizental" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/user_enter_notice"
            android:textSize="@dimen/textfont13" />
    </LinearLayout>

</LinearLayout>