<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/style_color_primary">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    >
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/lightwhite">
    <EditText android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/login_iphone"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:background="@null"
        android:textSize="@dimen/textfont13"
        android:inputType="phone"
        android:hint="@string/login_phone_hint"/>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightwhite_corn"/>
    <EditText android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/login_password"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:background="@null"
        android:textSize="@dimen/textfont13"
        android:inputType="textPassword"
        android:hint="@string/login_password_hint"/>
    </LinearLayout>
    <TextView 
        android:id="@+id/forgetpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:text="@string/login_forgetpassword"/>
    <TextView 
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_lightwhite_bg"
        android:text="@string/login"/>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/login_line_horizental"/>
    <TextView 
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_transparent_bg"
        android:text="@string/register"/>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <View android:layout_width="50dp"
            android:layout_height="5dp"
            android:background="@drawable/login_line_third_party"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/login_otherway"/>
        <View android:layout_width="50dp"
            android:layout_height="5dp"
            android:background="@drawable/login_line_third_party"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">
        <ImageView 
            android:id="@+id/login_sina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/login_sina"/>
        <ImageView 
            android:id="@+id/login_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/login_wechat"
            android:visibility="gone"/>
        <ImageView 
            android:id="@+id/login_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/login_qq"/>
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/login_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_noaccount"/>
    <ImageView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:src="@drawable/login_browse"/>
</LinearLayout>
</LinearLayout>

</LinearLayout>
